@@ -61,6 +61,7 @@ Collections.renderer.timestampToDatetime = function(value, metaData, record, row
 
 Collections.renderer.image = function(value, metaData, record, rowIndex, colIndex, store) {
     if (value != '' && value != null) {
-        return '<img src="' + MODx.config.base_url + value + '" width="64">';
+        var imgPath = MODx.config['collections.renderer_image_path'];
+        return '<img src="' + MODx.config.base_url + imgPath + value + '" width="64">';
     }
 };
