@@ -1,5 +1,6 @@
 Changelog for Collections.
 
+- Added system setting to modify image path in image renderer
 - Allow children under Selections
 - Added an option to add quip column
 - Fixed selecting templates in Collection view in Revo 2.2.x
